# Projekt-MURMEL

./: Controller.md  README.md
C++ Camera/: makefile
C++ Camera/example/: Camera.cpp  TEST_TCPServer_KinovaJaco.cpp
C++ Camera/src/: KeyholeDetection.cpp  TCPServer.cpp  TCPServer.hpp
C++ Controller/doc/: Documentation.conf
C++ Controller/example/: TEST_KinovaJaco.cpp
C++ Controller/src/: KinovaJaco2.hpp  PIDController.cpp  PIDController.hpp  TCPClient.hpp
Camera/: makefile
Camera/doc/: Documentation.conf
Camera/example/: TEST_OpenCV.cpp  TEST_TCPServer_Json.cpp
Camera/src/: KeyholeDetection.hpp
Controller/: makefile
Controller/doc/: Documentation.conf
Controller/example/: Controller.cpp  TEST_TCPClient.cpp  TEST_TCPClient_Jason.cpp  TEST_TCPClient_KinovaJaco.cpp
Controller/include/: Kinova.API.UsbCommandLayerUbuntu.h
Controller/src/: ExponentialFilter.cpp  ExponentialFilter.hpp  KinovaJaco2.cpp  KinovaJaco2.hpp  TCPClient.cpp
bartsch/: README.md
bartsch/kNN_Classification/: kNN_ver2_.py
kuebler/: README.md
kuebler/cpp/: Camera.md  Python.md  (+3 more)
paper_route_planning/: run_tests.sh  solver.py  thesis1.opt.tour  thesis1.tsp
wohlgemuth/: README.md
wohlgemuth/kinova_ros_murmel/kinova_ros_murmel/: CMakeLists.txt  package.xml
wohlgemuth/kinova_ros_murmel/kinova_ros_murmel/action/: ArmPose.action
wohlgemuth/kinova_ros_murmel/kinova_ros_murmel/config/: config.yaml
wohlgemuth/kinova_ros_murmel/kinova_ros_murmel/include/kinova_ros_controller/: KinovaRosController.h
wohlgemuth/kinova_ros_murmel/kinova_ros_murmel/launch/: kinova_ros_controller.launch
wohlgemuth/kinova_ros_murmel/kinova_ros_murmel/lib/: ExponentialFilter.cpp  ExponentialFilter.hpp  PIDController.cpp  PIDController.hpp
wohlgemuth/kinova_ros_murmel/kinova_ros_murmel/src/: KinovaRosController.cpp  kinova_ros_murmel_node.cpp
wohlgemuth/kinova_ros_murmel/kinova_ros_murmel/srv/: CameraData.srv  CameraMode.srv
(+26 files in other folders)
